refactor: Remove commented out code and add footer to index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Results Summary Component - Frontend Club</title>
   </head>
   <body>
-    <!-- <h1>Results Summary Component<br>Frontend Club</h1> -->
     <main>
       <article class="score-container">
         <h3>Your Result</h3>
@@ -72,5 +71,8 @@
         <button>Continue</button>
       </article>
     </main>
+    <footer>
+      <h1>Results Summary Component - Frontend Club</h1>
+    </footer>
   </body>
 </html>
