refactor: Update button hover background gradient in styles.css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Larry Villegas Costas" />
+    <meta
+      name="title"
+      content="PROY06: Results Summary Component - Larry Villegas Costas - Frontend Club"
+    />
+    <meta
+      name="description"
+      content="PROY06: Results Summary Component - Larry Villegas Costas - Frontend Club"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./assets/images/favicon-32x32.png"
+      sizes="32x32"
+    />
     <link rel="stylesheet" href="css/styles.css" />
     <script src="js/index.js" defer></script>
     <title>Results Summary Component - Frontend Club</title>
